--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -5,7 +5,11 @@
 }
 
 [app-planetarium]{
+    top : -4rem;
+    right : 0;
+    left : 0;
     height : 85rem;
+    animation : planetarium-in 4s;
 }
 
  p{
@@ -137,11 +141,4 @@
     @media(max-width: 1023px){
         margin : 7.5rem auto !important;
     }
-}
-
-[app-planetarium]{
-    top : 0rem;
-    right : 0;
-    left : 0;
-    height : 85rem;
 }
