--- a/src/app/shared/h2/h2.component.less
+++ b/src/app/shared/h2/h2.component.less
@@ -24,7 +24,7 @@
     left : 0;
     width : 9rem;
     height : 0.8rem;
-    animation: h2-line 2s;
+    animation: h2-line 2s ease-in;
     z-index: -1;
 }
 
