--- a/src/app/shared/devices/devices.component.less
+++ b/src/app/shared/devices/devices.component.less
@@ -5,18 +5,22 @@
 }
 
 @keyframes browser-in {
-    0% { bottom : 3.5rem; opacity : 0; }
+    0% { bottom : 1.5rem; opacity : 0; }
     100% { bottom : 5.5rem; opacity : 1}
 }
 
 @keyframes tablet-in {
-    0% { top : 2rem; opacity : 0; }
-    100% { top : 0; opacity : 1}
+    0% { top : 4rem; opacity : 0; transform: rotate(-5deg); }
+    80% { top : -0.1rem; opacity : 1; transform: rotate(6deg);}
+    90% { top : 0.1rem; opacity : 1; transform: rotate(6deg);}
+    100% { top : 0; opacity : 1; transform: rotate(5deg);}
 }
 
 @keyframes mobile-in {
-    0% { bottom : 10rem; opacity : 0; }
-    100% { bottom : 12rem; opacity : 1}
+    0% { bottom : 8rem; opacity : 0; transform: rotate(5deg); }
+    80% { bottom : 12.1rem; opacity : 1; transform: rotate(-6deg);}
+    90% { bottom : 11.9rem; opacity : 1; transform: rotate(-6deg);}
+    100% { bottom : 12rem; opacity : 1; transform: rotate(-5deg);}
 }
 
 :host{
@@ -33,7 +37,7 @@
     bottom : 0;
     z-index: 0;
     opacity : 0;
-    animation: computer-in 250ms cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards; 
+    animation: computer-in 250ms cubic-bezier(0.6, 0.4, 0.6, 1.50) forwards; 
 }
 
 .window-computer{
@@ -53,7 +57,7 @@
     left : calc(~"50% - 17.5rem");    
     bottom: 5.5rem;
     opacity : 0;
-    animation: browser-in 250ms cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards; 
+    animation: browser-in 250ms cubic-bezier(0.6, 0.4, 0.6, 1.50) forwards; 
 }
 
 .tablet{
@@ -64,9 +68,8 @@
     z-index: 2;    
     right : calc(~"25% - 13.5rem");
     top : 0;
-    transform: rotate(5deg);
     opacity : 0;
-    animation: tablet-in 250ms 1s cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards; 
+    animation: tablet-in 300ms 1s cubic-bezier(0.6, 0.4, 0.6, 1.50) forwards; 
 }
 
 .window-tablet{
@@ -89,7 +92,7 @@
     bottom : 10rem;
     transform: rotate(-5deg); 
     opacity : 0;
-    animation: mobile-in 250ms 500ms cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards; 
+    animation: mobile-in 300ms 500ms cubic-bezier(0.6, 0.4, 0.6, 1.50) forwards; 
 }
 
 .window-mobile{
