--- a/src/app/shared/planetarium/planetarium.component.less
+++ b/src/app/shared/planetarium/planetarium.component.less
@@ -1,8 +1,10 @@
 @import "../../../assets/less/rules.less";
 
+
 :host{
     position : absolute;
     z-index: -1;
+    left : 0;
 }
 
 #animation-layout{
@@ -12,7 +14,6 @@
     overflow : hidden;
 }
 
-
 .circle{
     border-radius: 50%;
     border : solid 1px rgba(226,226,226, 1);
@@ -20,7 +21,6 @@
     position : absolute;
     opacity : 1;
     z-index : -3;
-    transition : top 2s, right 2s;
 }
 
 
