--- a/src/app/shared/wave/wave.component.less
+++ b/src/app/shared/wave/wave.component.less
@@ -2,16 +2,16 @@
 
 @keyframes wave-in {
     0% { top : 0; opacity : 0; }
-    100% { top : 38rem; opacity : 1; }
+    100% { top : 37rem; opacity : 1; }
 }
 
 @keyframes wave-in-mobile {
     0% { top : 0; opacity : 0; }
-    100% { top : 38rem; opacity : 1; }
+    100% { top : 37rem; opacity : 1; }
 }
 
 @keyframes background-in {
-    0% { height : 30rem; opacity : 0; }
+    0% { height : 0; opacity : 1; }
     100% { height : 50rem; opacity : 1; }
 }
 
@@ -35,7 +35,7 @@
     opacity : 0;
     width : 100%;
     position : absolute; 
-    height : 12rem;
+    height : 13rem;
 }
 
 .background{
@@ -44,31 +44,31 @@
     position : absolute; 
     fill : @clr-lightblue;
     opacity : 0;
-    animation : background-in 1000ms 500ms forwards;
+    animation : background-in 1000ms 450ms cubic-bezier(0.6, 0.4, 0.6, 1.10)  forwards;
 }
 
 .wave-1{
     fill : @clr-lightblue2;
-    animation : wave-in 1250ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
+    animation : wave-in 1250ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards;
 }
 .wave-2{
     fill : @clr-lightblue3;
-    animation : wave-in 1150ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
+    animation : wave-in 1150ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards;
 }
 .wave-3{
     fill : @clr-lightblue4;
-    animation : wave-in 1050ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
+    animation : wave-in 1050ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards;
 }
 
 .wave-1-mobile{
     fill : @clr-lightblue2;
-    animation : wave-in-mobile 1250ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
+    animation : wave-in-mobile 1250ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards;
 }
 .wave-2-mobile{
     fill : @clr-lightblue3;
-    animation : wave-in-mobile 1150ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
+    animation : wave-in-mobile 1150ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards;
 }
 .wave-3-mobile{
     fill : @clr-lightblue4;
-    animation : wave-in-mobile 1050ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
+    animation : wave-in-mobile 1050ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.10) forwards;
 }
