--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -2,12 +2,12 @@
 <div class="block" id="first-block">
     <h1>Higher Education in the 21st-Century.</h1>
     <p>
-       The power of <b>networked education</b>, everywheran anytime, on a single<br/>
+       The power of <b>networked education</b>, everywhere and anytime, on a single<br/>
         Social Learning Environment.
     </p>
     
 </div>
-<div class="columns" id="all-in-one">
+<div class="desktop columns" id="all-in-one">
     <div class="column">
         <div app-h2>All-in-one platform</div>
         <div  class="column-block gray">
@@ -41,38 +41,90 @@
         </div>
     </div>
     <div class="column">
-        <img src="assets/images/product.png" id="product" />
+        <div id="product"></div>
     </div>
 </div>
+
+<div class="columns mobile" id="all-in-one">
+    <div class="column">
+        <div app-h2>All-in-one platform</div>
+        
+        <div app-carousel [time]="10000" >
+            
+            <div  carousel-page class="column-block">
+                <b>Learning Management System</b>
+                <p>
+                    We are committed to being on the cutting edge of
+                    innovation in higher education. Our state-of-the-art
+                    L.M.S enables to distribute online, blended courses over the internet as well as 
+                    to augment on-campus teaching in a brick and mortar environment.</p>
+                <div id="product"></div>
+            </div>
+            
+            <div  carousel-page class="column-block">
+                <b>Social networking tools</b>
+                <p>
+                    Our disruptive technology allows to create a connected, engaged and 
+                    collaborative learning experience for students and faculty across the world.
+                </p>
+                <div id="product"></div>
+            </div>
+            <div  carousel-page class="column-block">
+                <b>Videoconferencing system</b>
+                <p>
+                   Our all-in-one platform make it easy to launch one-on- one, group calls or live classes without 
+                   needing to open another app or share invite links.
+                </p>
+                <div id="product"></div>
+            </div>
+            <div  carousel-page class="column-block">
+                <b>Data collection</b>
+                <p>
+                   We use the latest forward-looking algorithms in human-technology 
+                   tracking to measure Assurance of Learning and online engagement.
+                </p>
+                <div id="product"></div>
+            </div>
+        </div>
+       
+    </div>
+    <div class="column">
+        
+    </div>
+</div>
+
 <div id="planetarium"  (window:resize)="onResize($event)">
     <div app-planetarium 
          
         [circles]="circles" 
         [nbParticles]="15" 
-        [size]="[0,800]"
+        [size]="[0,height]"
         [center]="center">
         
     </div>
-    <div class="planetarium-block" id="share-collaborate">
-        <b>Share & Collaborate</b>
-        <p>
-            Our collaborative learning environment based on community of practice, group projects, 
-            peer evaluation and class discussions enables the proven best 
-            practices for student and faculty engagement.
-        </p>
-    </div>
-    <div class="planetarium-block" id="network">
-        <b>Network</b>
-        <p>
-            Whether B-schools have a single, multi-campus, joint degree or alliance model strategy, 
-            we believe that networking-based education allows for resources to be 
-            distributed more efficiently.
-        </p>
+    <div app-h2>Networked education</div>
+    <div class="planetarium-blocks">
+        <div class="planetarium-block" id="share-collaborate">
+            <b>Share & Collaborate</b>
+            <p>
+                Our collaborative learning environment based on community of practice, group projects, 
+                peer evaluation and class discussions enables the proven best 
+                practices for student and faculty engagement.
+            </p>
+        </div>
+        <div class="planetarium-block" id="network">
+            <b>Network</b>
+            <p>
+                Whether B-schools have a single, multi-campus, joint degree or alliance model strategy, 
+                we believe that networking-based education allows for resources to be 
+                distributed more efficiently.
+            </p>
+        </div>
     </div>
 </div>
 <div class="columns">
     <div class="column">
-        <div app-h2 >Everywhere. Anytime.</div>
+        <div app-h2 id="everywhere" >Everywhere. Anytime.</div>
         <div  class="column-block">
             <b><span class="icon icon-loop2"></span> Responsiveness & Sync</b>
             <p>
@@ -91,5 +143,17 @@
         <div app-devices>
 
         </div>
+    </div>
+</div>
+<div class="block" id="ready">
+    <div app-h2>Ready to get started</div>
+    <p>Create your account in seconds and start free trial 30 days.</p>
+    <div class="buttons">
+        <button class="button" id="create-account">
+            Create Account
+        </button>
+        <button class="button white" [routerLink]="['/pricing']">
+            Our pricing plan
+        </button>
     </div>
 </div>
