--- a/src/app/shared/devices/devices.component.less
+++ b/src/app/shared/devices/devices.component.less
@@ -10,23 +10,27 @@
 }
 
 @keyframes tablet-in {
-    0% { top : 4rem; opacity : 0; transform: rotate(-5deg); }
-    80% { top : -0.1rem; opacity : 1; transform: rotate(6deg);}
-    90% { top : 0.1rem; opacity : 1; transform: rotate(6deg);}
-    100% { top : 0; opacity : 1; transform: rotate(5deg);}
+    0% { top : 4rem; opacity : 0; transform: rotate(-4deg); }
+    80% { top : -0.1rem; opacity : 1; transform: rotate(5deg);}
+    90% { top : 0.1rem; opacity : 1; transform: rotate(5deg);}
+    100% { top : 0; opacity : 1; transform: rotate(4deg);}
 }
 
 @keyframes mobile-in {
-    0% { bottom : 8rem; opacity : 0; transform: rotate(5deg); }
-    80% { bottom : 12.1rem; opacity : 1; transform: rotate(-6deg);}
-    90% { bottom : 11.9rem; opacity : 1; transform: rotate(-6deg);}
-    100% { bottom : 12rem; opacity : 1; transform: rotate(-5deg);}
+    0% { bottom : 8rem; opacity : 0; transform: rotate(4deg); }
+    80% { bottom : 12.1rem; opacity : 1; transform: rotate(-5deg);}
+    90% { bottom : 11.9rem; opacity : 1; transform: rotate(-5deg);}
+    100% { bottom : 12rem; opacity : 1; transform: rotate(-4deg);}
 }
 
 :host{
     position : relative;
-    height : 45rem;
-    width : 70rem;
+    height : 45.5rem;
+    width : 56rem;
+    @media(max-width: 1023px){
+        width : 46rem;
+        height : 40rem;
+    }
 }
 
 .computer{
@@ -34,6 +38,10 @@
     width : 56rem;
     height : 35rem;
     left : calc(~"50% - 28rem");
+    @media(max-width: 1023px){
+        width : 46rem;
+        left : calc(~"50% - 23rem");
+    }
     bottom : 0;
     z-index: 0;
     opacity : 0;
@@ -47,6 +55,12 @@
     height: 14rem; 
     bottom : 9rem;
     right : calc(~"50% - 10rem");
+    @media(max-width: 1023px){
+        width : 14rem;
+        height: 10rem; 
+        bottom : 11rem;
+        right : calc(~"50% - 7rem");   
+    }
 }
 
 .browser{
@@ -58,6 +72,10 @@
     bottom: 5.5rem;
     opacity : 0;
     animation: browser-in 250ms cubic-bezier(0.6, 0.4, 0.6, 1.50) forwards; 
+    @media(max-width: 1023px){
+        width : 26rem;
+        left : calc(~"50% - 13rem");   
+    }
 }
 
 .tablet{
@@ -66,10 +84,15 @@
     width : 27rem;
     height : 37rem;
     z-index: 2;    
-    right : calc(~"25% - 13.5rem");
+    right : calc(~"25% - 12.5rem");
     top : 0;
     opacity : 0;
     animation: tablet-in 300ms 1s cubic-bezier(0.6, 0.4, 0.6, 1.50) forwards; 
+    @media(max-width: 1023px){
+        width : 22rem;
+        right : 0;
+        height : 30rem;
+    }
 }
 
 .window-tablet{
@@ -79,7 +102,13 @@
     height: 14rem; 
     top : 11.5rem;
     right : calc(~"25% - 8rem");
-    transform: rotate(5deg);
+    transform: rotate(4deg);
+    @media(max-width: 1023px){
+        top : 10rem;
+        height: 10rem; 
+        width : 12rem;
+        right : calc(~"25% - 6rem");
+    }
 }
 
 .mobile-phone{
@@ -88,11 +117,16 @@
     width : 15rem;
     height : 29rem;
     z-index: 2;    
-    left : calc(~"30% - 7.5rem");
+    left : calc(~"30% - 10.5rem");
     bottom : 10rem;
-    transform: rotate(-5deg); 
+    transform: rotate(-4deg); 
     opacity : 0;
-    animation: mobile-in 300ms 500ms cubic-bezier(0.6, 0.4, 0.6, 1.50) forwards; 
+    animation: mobile-in 300ms 500ms cubic-bezier(0.6, 0.4, 0.6, 1.50) forwards;
+    @media(max-width: 1023px){
+        width : 12rem;
+        left : 4rem;
+    }
+    
 }
 
 .window-mobile{
@@ -101,6 +135,12 @@
     width: 10rem;
     height: 13rem; 
     top : 11.5rem;
-    left : calc(~"30% - 5rem");
-    transform: rotate(-5deg);
+    left : calc(~"30% - 8rem");
+    transform: rotate(-4deg);
+    @media(max-width: 1023px){
+        top : 8rem;
+        height: 10rem; 
+        width : 8rem;
+        left : 6rem;
+    }
 }
