--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -15,6 +15,12 @@
             <div>Download App IOS</div>
             <div>Download App Android</div>
             <div>Status</div>
+            <div>
+                <img class="footer-logo" src="assets/images/Logo-white.png"/>
+                <p>
+                    Copyright © 2017, Twic by THE STUDNET.
+                </p>
+            </div>
         </div>
         <div class="dropdown-toggle">
             <div class="text">See our Product</div> <div class="arrow">></div>
