--- a/src/app/shared/footer/footer.component.less
+++ b/src/app/shared/footer/footer.component.less
@@ -36,10 +36,28 @@
             }
         }
        .dropdown-content{
-            position : fixed;
-            bottom : 0;
+            position : absolute;
+            bottom : 0rem;
             right : 0;
             left : 0;
+            z-index: 5;
+            & > div:last-of-type{
+                display : flex;
+                flex-direction : column;
+                padding : 1rem 0;
+                text-align: center;
+                font-size: 1.4rem;
+                font-weight: 300;
+                height : 22.5rem;
+                img{
+                    margin : -6.1rem auto 1rem;
+                }
+                p{
+                    margin : 0;
+                    height : 4rem;
+                    line-height: 4rem;
+                }
+            }
         }
         @media(max-width : 1023px){
             flex-direction : column;
@@ -62,7 +80,7 @@
         @media(max-width : 1023px){
             text-align : center;
             border-width : 0;
-            padding-right : 0;
+            padding : 0;
             width : 100%;
         }
     }
