--- a/src/app/shared/header/header.component.less
+++ b/src/app/shared/header/header.component.less
@@ -44,6 +44,7 @@
             top : 0;
             right : 0;
             left : 0;
+            z-index: 5;
         }
         .bar{
             height : 0.2rem;
