--- a/src/app/shared/devices/devices.component.less
+++ b/src/app/shared/devices/devices.component.less
@@ -107,7 +107,7 @@
         top : 10rem;
         height: 10rem; 
         width : 12rem;
-        right : calc(~"25% - 6rem");
+        right : 5rem;
     }
 }
 
