--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -38,7 +38,7 @@
         [app-devices]{
             width : 100%;
             max-width: 55rem;
-            margin-top: 3rem;
+            margin: 3rem auto 0;
         }
     }
     .column{
@@ -182,7 +182,6 @@
             &#share-collaborate{
                 margin-bottom : 2rem;
             }
-           
         }
       
         b{
