--- a/src/app/about/about.component.less
+++ b/src/app/about/about.component.less
@@ -23,6 +23,9 @@
     @media(max-width : 1023px){ 
         margin-top : 14rem;
     }
+    @media(max-width : 479px){ 
+        margin-top : 8rem;
+    }
 }
 
 #adress{
