--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -62,6 +62,11 @@
             padding : 24rem 2rem 18rem 2rem;
             margin-bottom : 16rem;
         }
+        @media(max-width : 479px){
+            margin-top : -22rem;
+            padding : 24rem 2rem 18rem 2rem;
+            margin-bottom : 10rem;
+        }
         border-radius: 4px;
         flex : 1;
         color: @clr-text;
@@ -87,6 +92,10 @@
         @media(max-width : 1023px){
             text-align : center;
         }
+        @media(max-width : 479px){
+            font-size: 2.6rem;
+            line-height: 3rem;
+        }
     }
 }
 
@@ -107,8 +116,11 @@
     position : absolute;
     left : 3rem;
     top : -3rem;
-     @media(max-width : 1023px){
+    @media(max-width : 1023px){
         left : calc(~"70% + 4rem");
+    }
+     @media(max-width : 479px){
+        left : calc(~"70% + 1rem");
     }
 }
 
@@ -131,6 +143,9 @@
             margin : 0 auto;
             max-width : 100%; 
             opacity: 0.55;
+            @media(max-width: 479px){
+                height:4rem;
+            }
         }
     }
     
@@ -140,5 +155,8 @@
     margin : 7.5rem auto 13rem auto !important;
     @media(max-width: 1023px){
         margin : 7.5rem auto !important;
+    }
+    @media(max-width: 479px){
+        margin : 0rem auto !important 7.5rem;
     }
 }
