--- a/src/app/shared/devices/devices.component.less
+++ b/src/app/shared/devices/devices.component.less
@@ -13,7 +13,7 @@
     0% { top : 4rem; opacity : 0; transform: rotate(-4deg); }
     80% { top : -0.1rem; opacity : 1; transform: rotate(5deg);}
     90% { top : 0.1rem; opacity : 1; transform: rotate(5deg);}
-    100% { top : 0; opacity : 1; transform: rotate(4deg);}
+    100% { top : 0rem; opacity : 1; transform: rotate(4deg);}
 }
 
 @keyframes mobile-in {
@@ -29,18 +29,27 @@
     width : 56rem;
     @media(max-width: 1023px){
         width : 46rem;
-        height : 40rem;
+        height: 35rem;
+    }
+    
+    @media(max-width: 479px){
+        width : 30rem;
+        height : 22rem;
     }
 }
 
 .computer{
     position :absolute;
     width : 56rem;
-    height : 35rem;
     left : calc(~"50% - 28rem");
     @media(max-width: 1023px){
         width : 46rem;
         left : calc(~"50% - 23rem");
+    }
+    
+    @media(max-width: 479px){
+        width : 30rem;
+        left : calc(~"50% - 15rem");
     }
     bottom : 0;
     z-index: 0;
@@ -51,22 +60,30 @@
 .window-computer{
     position :absolute;
     z-index: 2;   
-    width: 20rem;
+    width: 16rem;
     height: 14rem; 
     bottom : 9rem;
-    right : calc(~"50% - 10rem");
+    right : calc(~"50% - 8rem");
     @media(max-width: 1023px){
         width : 14rem;
         height: 10rem; 
-        bottom : 11rem;
+        bottom : 8rem;
         right : calc(~"50% - 7rem");   
+    }
+    @media(max-width: 479px){
+        width : 10rem;
+        height : 6rem;
+        bottom : 5.5rem;
+        right : calc(~"50% - 5rem");
+        /deep/ .button{
+            display : none;
+        }
     }
 }
 
 .browser{
     position :absolute;
     width : 35rem;
-    height : 24rem;
     z-index: 1;    
     left : calc(~"50% - 17.5rem");    
     bottom: 5.5rem;
@@ -76,22 +93,30 @@
         width : 26rem;
         left : calc(~"50% - 13rem");   
     }
+    @media(max-width: 479px){
+        width : 16rem;
+        top: 7.5rem;
+        left : calc(~"50% - 8rem");
+    }
 }
 
 .tablet{
     position :absolute;
     z-index: 3;    
     width : 27rem;
-    height : 37rem;
     z-index: 2;    
     right : calc(~"25% - 12.5rem");
     top : 0;
     opacity : 0;
     animation: tablet-in 300ms 1s cubic-bezier(0.6, 0.4, 0.6, 1.50) forwards; 
     @media(max-width: 1023px){
-        width : 22rem;
-        right : 0;
-        height : 30rem;
+        width : 20rem;
+        right : 5rem;
+        top : 2.5rem;
+    }
+    @media(max-width : 479px){
+        width: 12rem;
+        right: 2rem;
     }
 }
 
@@ -101,13 +126,19 @@
     width: 16rem;
     height: 14rem; 
     top : 11.5rem;
-    right : calc(~"25% - 8rem");
+    right : calc(~"25% - 7rem");
     transform: rotate(4deg);
-    @media(max-width: 1023px){
-        top : 10rem;
-        height: 10rem; 
-        width : 12rem;
-        right : 5rem;
+    @media(max-width: 1023px){    
+        top: 9rem;
+        height: 10rem;
+        width: 12rem;
+        right: 9rem;
+    }
+    @media(max-width : 479px){
+        top: 3.5rem;
+        height: 10rem;
+        width: 8rem;
+        right: 4rem;
     }
 }
 
@@ -115,7 +146,6 @@
     position :absolute;
     z-index: 3;   
     width : 15rem;
-    height : 29rem;
     z-index: 2;    
     left : calc(~"30% - 10.5rem");
     bottom : 10rem;
@@ -123,8 +153,14 @@
     opacity : 0;
     animation: mobile-in 300ms 500ms cubic-bezier(0.6, 0.4, 0.6, 1.50) forwards;
     @media(max-width: 1023px){
-        width : 12rem;
-        left : 4rem;
+        width: 12rem;
+        left: 6.5rem;
+        top: 4rem;
+    }
+    @media(max-width : 479px){
+        width: 7rem;
+        left: 3.5rem;
+        top: 1rem;
     }
     
 }
@@ -134,13 +170,22 @@
     z-index: 4;   
     width: 10rem;
     height: 13rem; 
-    top : 11.5rem;
+    top : 12.5rem;
     left : calc(~"30% - 8rem");
     transform: rotate(-4deg);
     @media(max-width: 1023px){
-        top : 8rem;
+        top : 10rem;
         height: 10rem; 
         width : 8rem;
-        left : 6rem;
+        left : 8.5rem;
+    }
+    @media(max-width : 479px){    
+        top: 4rem;
+        height: 7rem;
+        width: 4rem;
+        left: 5rem;
+        /deep/ .button{
+            display : none;
+        }
     }
 }
