Footer link + checkmark

--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -90,11 +90,11 @@
         All features
     </div>
     <li>
-        <ul><span class="icon icon-checkbox-checked"></span>State-of-the-art Learning Management system</ul>
-        <ul><span class="icon icon-checkbox-checked"></span>Collaborative learning and social networking tools</ul>
-        <ul><span class="icon icon-checkbox-checked"></span>Videoconferencing system</ul>
-        <ul><span class="icon icon-checkbox-checked"></span>Data collection and graphic analytics</ul>
-        <ul><span class="icon icon-checkbox-checked"></span>24/7 support (chat and hot line)</ul>
-        <ul><span class="icon icon-checkbox-checked"></span>Custom integration and branding</ul>
+        <ul><span class="icon icon-checkmark"></span>State-of-the-art Learning Management system</ul>
+        <ul><span class="icon icon-checkmark"></span>Collaborative learning and social networking tools</ul>
+        <ul><span class="icon icon-checkmark"></span>Videoconferencing system</ul>
+        <ul><span class="icon icon-checkmark"></span>Data collection and graphic analytics</ul>
+        <ul><span class="icon icon-checkmark"></span>24/7 support (chat and hot line)</ul>
+        <ul><span class="icon icon-checkmark"></span>Custom integration and branding</ul>
     </li>
 </div>
