--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -202,11 +202,21 @@
                 margin : 0 0.5rem 4rem;
             }
         }
-        .icon{
+        .icon{    
             margin-right: 1rem;
-            
+            border-radius: 50%;
+            background: #3C3F48;
+            color: #FFF;
+            font-size: 0.8rem;
+            height: 1.6rem;
+            line-height: 1.6rem;
+            width: 1.6rem;
+            text-align: center;
+            vertical-align: middle;
+            display : inline-block;
             @media(max-width: 1023px){
                 display : block;
+                margin: 0 auto 1rem
             }
         }
     }
