On travaille ses chevrons\!

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
         This is why we have developped a technology combining a state-of-the-art <br class='desktop'/>
         Learning Management System with 21st-Century social networking tools.
     </p>
-    <button class="button">See Our Product<span class="arrow">></span></button>
+    <button class="button">See Our Product<span class="chevron right"></span></button>
 </div>
 <div class="block citation-block">
     <div class="portrait"></div>
