--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="dropdown-toggle">
-            <div class="text">See our Product</div> <div class="arrow">></div>
+            <div class="text">See our Product</div> <div class="chevron bottom"></div>
         </div>
         
     </div>
