--- a/src/app/shared/footer/footer.component.less
+++ b/src/app/shared/footer/footer.component.less
@@ -28,11 +28,11 @@
             .text{
                 flex:  1;
             }
-            .arrow{
-                font-family: cursive;
-                font-size: 1.5rem;
-                transform : rotate(90deg);
-
+            .chevron:before{
+                height: 0.5rem;
+                width: 0.5rem;
+                border-width: 0.3rem 0.3rem 0 0;
+                margin: 1.75rem 1rem 0 0;
             }
         }
        .dropdown-content{
