--- a/src/styles.less
+++ b/src/styles.less
@@ -93,7 +93,7 @@ button{
     &:hover{
         background : #1EBAB7;
         box-shadow: inset 0px 1px 2px 0px rgba(217,217,217,1);
-        .arrow{
+        .chevron{
             margin: -1px 0.3rem 0 1.7rem;
         }
         
@@ -110,12 +110,8 @@ button{
 
         }     
     }
-    .arrow{
+    .chevron{
         margin: -1px 0 0 2rem;
-        float : right;
-        font-family: cursive;
-        font-size: 1.5rem;
-        transition : margin 50ms ease-in; 
         
     }
    
