Contact us avec IE...\!

--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -66,6 +66,11 @@
             }
             .price{                
                 background : @clr-darkgray2;
+                .title{
+                    height : 10rem;
+                    margin : 0;
+                    line-height: 10rem;
+                }
             }
             @media(max-width: 1023px){
                 box-shadow: inset 0px 8px 5px 0px rgba(217,217,217,0.15);
