--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
     </p>
     
 </div>
-<div class="block" id="first-paragraph">
+<div class="block" id="first-paragraph" app-fade-in [delay]="2000">
     <p>
         In a more than ever connected world, we believe that innovation drives value creation through platforms, people and technology. <br/>
         We believe at <b>Twic</b> thant &laquo;the world is a campus&raquo;.
@@ -17,7 +17,7 @@
         <b>Principality of Monaco</b> has for many years been working towards and promoting a better world, placing the 
         <b>United Nations Millenium Development Goals</b> at the heart of it's foreign policy.
 </div>
-<div class="block" id="adress">
+<div class="block" id="adress" app-fade-in >
     <img class="twic-logo"  src="assets/images/Logo.svg"/>
     <div class="by">by</div>
     <img class="studnet-logo"  src="assets/images/studnet.png"/>
