--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -7,8 +7,8 @@
     </p>
     
 </div>
-<div app-h2 id="choose-you-plan">Choose your plan</div>
-<div class="block table-block">
+<div app-h2 id="choose-you-plan" app-fade-in [delay]='2000'>Choose your plan</div>
+<div class="block table-block" app-fade-in [delay]='2000'>
     <div class="table">
         <div class="white column">
             <div class="title">Course</div>
@@ -69,13 +69,13 @@
         </div>
     </div>
 </div>
-<div class="block" id="our-pricing">
+<div class="block" id="our-pricing" app-fade-in>
     <p>
         Any question about <b>our pricing</b>? Feel free to <b><u>contact us</u></b>, we're more than happy to help.
     </p>
 </div>
 
-<div class='block' id='try-our-product'>
+<div class='block' id='try-our-product' app-fade-in>
     <p>
         <b>You can try our product.</b><br/>
         Start your 30-day free trial for one course today!
@@ -85,7 +85,7 @@
     </button>
 </div>
 
-<div class='block' id='features'>
+<div class='block' id='features' app-fade-in>
     <div app-h2>
         All features
     </div>
