--- a/src/app/shared/wave/wave.component.html
+++ b/src/app/shared/wave/wave.component.html
@@ -1,5 +1,5 @@
 
-<div class="waves">
+<div class="waves" app-fade-in>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="wave-1 wave desktop" >
         <polygon points="0,0 100,100 90,100 50,80 0,100"/>
     </svg>
