--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -1,25 +1,44 @@
 @import "../../assets/less/rules.less";
-
-
+ 
 @keyframes circle-0 {
-    0% { margin-right : 2rem; margin-top : 2rem; height : 12rem; width : 12rem; }
-    100% { margin-right : 0; margin-top : 0; height : 16rem; width : 16rem; }
+    0% { opacity : 0; margin-right : 2rem; margin-top : 2rem; height : 12rem; width : 12rem; }
+    100% { opacity : 1; margin-right : 0; margin-top : 0; height : 16rem; width : 16rem; }
+}
+@keyframes small-circle-0 {
+    0% { opacity : 0; margin-right : 1.5rem; margin-top : 1.5rem; height : 7rem; width : 7rem; }
+    100% { opacity : 1; margin-right : 0; margin-top : 0; height : 10rem; width : 10rem; }
 }
 @keyframes circle-1 {
-    0% {  margin-right : 3.5rem; margin-top : 3.5rem;  height : 22rem; width : 22rem; }
-    100% {  margin-right : 0; margin-top : 0; height : 29rem; width : 29rem; }
+    0% {  opacity : 0; margin-right : 3.5rem; margin-top : 3.5rem;  height : 22rem; width : 22rem; }
+    100% {  opacity : 1; margin-right : 0; margin-top : 0; height : 29rem; width : 29rem; }
+}
+@keyframes small-circle-1 {
+    0% { opacity : 0; margin-right : 3rem; margin-top : 3rem; height : 14rem; width : 14rem; }
+    100% { opacity : 1; margin-right : 0; margin-top : 0; height : 20rem; width : 20rem; }
 }
 @keyframes circle-2 {
-    0% { margin-right : 5rem; margin-top : 5rem;  height : 32rem; width : 32rem; }
-    100% { margin-right : 0; margin-top : 0; height : 42rem; width : 42rem; }
+    0% { opacity : 0; margin-right : 5rem; margin-top : 5rem;  height : 32rem; width : 32rem; }
+    100% { opacity : 1; margin-right : 0; margin-top : 0; height : 42rem; width : 42rem; }
+}
+@keyframes small-circle-2 {
+    0% { opacity : 0; margin-right : 4rem; margin-top : 4rem; height : 22rem; width : 22rem; }
+    100% { opacity : 1; margin-right : 0; margin-top : 0; height : 30rem; width : 30rem; }
 }
 @keyframes circle-3 {
-    0% { margin-right : 7rem; margin-top : 7rem; height : 41rem; width : 41rem; }
-    100% { margin-right : 0; margin-top : 0;  height : 55rem; width : 55rem; }
+    0% { opacity : 0; margin-right : 7rem; margin-top : 7rem; height : 41rem; width : 41rem; }
+    100% { opacity : 1; margin-right : 0; margin-top : 0;  height : 55rem; width : 55rem; }
+}
+@keyframes small-circle-3 {
+    0% { opacity : 0; margin-right : 5rem; margin-top : 5rem; height : 30rem; width : 30rem; }
+    100% { opacity : 1; margin-right : 0; margin-top : 0; height : 40rem; width : 40rem; }
 }
 @keyframes circle-4 {
-    0% { margin-right : 9rem; margin-top : 9rem; height : 52rem; width : 52rem; }
-    100% {  margin-right : 0; margin-top : 0; height : 70rem; width : 70rem; }
+    0% { opacity : 0; margin-right : 9rem; margin-top : 9rem; height : 52rem; width : 52rem; }
+    100% {  opacity : 1; margin-right : 0; margin-top : 0; height : 70rem; width : 70rem; }
+}
+@keyframes small-circle-4 {
+    0% { opacity : 0; margin-right : 6rem; margin-top : 6rem; height : 36rem; width : 36rem; }
+    100% { opacity : 1; margin-right : 0; margin-top : 0; height : 48rem; width : 48rem; }
 }
 
 #first-block{
@@ -143,20 +162,38 @@
         }
     }
     & /deep/ [app-planetarium]{
+        .circle{
+            opacity : 0;
+        }
         #circle-0{
-            animation : circle-0 1s 2s  cubic-bezier(0.6, 0.4, 0.6, 1.3);
+            animation : circle-0 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+            @media(max-width : 1023px){
+                animation : small-circle-0 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+            }
         }
         #circle-1{
-            animation : circle-1 1.1s 2s  cubic-bezier(0.6, 0.4, 0.6, 1.35);
+            animation : circle-1 2.1s cubic-bezier(0.6, 0.4, 0.6, 1.35);
+            @media(max-width : 1023px){
+                animation : small-circle-1 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+            }
         }
         #circle-2{
-            animation : circle-2 1.2s 2s  cubic-bezier(0.6, 0.4, 0.6, 1.4);
+            animation : circle-2 2.2s  cubic-bezier(0.6, 0.4, 0.6, 1.4);
+            @media(max-width : 1023px){
+                animation : small-circle-2 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+            }
         }
         #circle-3{
-            animation : circle-3 1.3s 2s  cubic-bezier(0.6, 0.4, 0.6, 1.45);
+            animation : circle-3 2.3s cubic-bezier(0.6, 0.4, 0.6, 1.45);
+            @media(max-width : 1023px){
+                animation : small-circle-3 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+            }
         }
         #circle-4{
-            animation : circle-4 1.4s 2s  cubic-bezier(0.6, 0.4, 0.6, 1.5);
+            animation : circle-4 2.4s  cubic-bezier(0.6, 0.4, 0.6, 1.5);
+            @media(max-width : 1023px){
+                animation : small-circle-4 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+            }
         }
     }
     .planetarium-blocks{
