--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -99,9 +99,9 @@
             }
             .number{
                 font-size: 5rem;
-                min-width : 4rem;
                 font-weight: bold;
                 line-height: 10rem;
+                text-align: center;
             }
             .k{
                 width: 1.5rem;
