--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -37,7 +37,7 @@
     margin-bottom: 15rem;
     display : flex;
     @media(max-width : 1023px){
-        flex-direction : column;
+        display : block;
         margin-top: 8.5rem;
         margin-bottom: 6.5rem;
     }
@@ -54,6 +54,8 @@
         @media(max-width : 1023px){
             height : 24rem;
             width : 40%;
+            position: absolute;
+            left: 30%;
             background-position: 70% 50%;
         }
 
@@ -65,14 +67,7 @@
         background: linear-gradient(203.37deg, #EEEEEE 0%, #FFFFFF 60%);
         padding : 8rem 2rem 2rem 6rem;
         @media(max-width : 1023px){
-            margin-top : -22rem;
-            padding : 24rem 2rem 18rem 2rem;
-            margin-bottom : 16rem;
-        }
-        @media(max-width : 479px){
-            margin-top : -22rem;
-            padding : 24rem 2rem 18rem 2rem;
-            margin-bottom : 10rem;
+            padding : 24rem 2rem 0;
         }
         border-radius: 4px;
         flex : 1;
