--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -40,6 +40,10 @@
     0% { opacity : 0; margin-right : 6rem; margin-top : 6rem; height : 36rem; width : 36rem; }
     100% { opacity : 1; margin-right : 0; margin-top : 0; height : 48rem; width : 48rem; }
 }
+@keyframes planetarium-block{
+    0% { opacity : 0; }
+    100% { opacity : 1; }
+}
 
 #first-block{
     animation:  title-in 250ms linear;
@@ -221,6 +225,8 @@
         max-width: 40rem;
         min-height: 20rem;
         padding : 2rem;
+        opacity : 0;
+        animation : planetarium-block 2s forwards;
         background: linear-gradient(180deg, #FFFFFF 0%, rgba(255,255,255,0.5) 100%);
         box-shadow: 0 1px 12px 0 rgba(222,222,222,0.5);
         border: 1px solid #DEDEDE;
@@ -229,9 +235,11 @@
          @media(min-width : 1024px){
             &#share-collaborate{
                 margin-right : 4rem;
+                animation-delay : 2s;
             }
             &#network{
                 margin-left : 4rem;
+                animation-delay : 2.5s;
 
             }
         }
