--- a/src/app/shared/header/header.component.less
+++ b/src/app/shared/header/header.component.less
@@ -10,7 +10,7 @@
         margin-left : 1rem;
         cursor : pointer;
         @media(max-width:1024px){
-            margin-left : auto;
+            margin : 0 auto;
         }
     }
     
