--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -15,6 +15,8 @@
     left : 0;
     height : 85rem;
     /deep/ .circle{
+        margin-right:-40rem; 
+        margin-top : -40rem;
         animation : circle 2s 500ms forwards;
     }
 }
