Fix ff animation + threat ss points

--- a/src/app/about/about.component.less
+++ b/src/app/about/about.component.less
@@ -16,7 +16,7 @@
 }
 
 #first-paragraph{
-    margin-top : 22rem;
+    margin : 22rem 0 8rem;
     p{
         margin : 3rem 0;
     }
@@ -32,6 +32,7 @@
     font-size: 1.6rem;
     .twic-logo{
         margin-top: 4rem;
+        height : 4rem;
     } 
     .by{
         margin : 2rem 0;
