--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -149,7 +149,7 @@
     <div app-h2>Ready to get started</div>
     <p>Create your account in seconds and start free trial 30 days.</p>
     <div class="buttons">
-        <button class="button" id="create-account">
+        <button class="button" id="create-account" [routerLink]="['/contact-us']">
             Create Account
         </button>
         <button class="button white" [routerLink]="['/pricing']">
