--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -223,8 +223,8 @@
     .planetarium-block{
         width : 100%;
         max-width: 40rem;
-        min-height: 20rem;
-        padding : 2rem;
+        min-height: 22rem;
+        padding: 2rem 2rem 1rem;
         opacity : 0;
         animation : planetarium-block 2s forwards;
         background: linear-gradient(180deg, #FFFFFF 0%, rgba(255,255,255,0.5) 100%);
