--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,7 +12,7 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-            <img class="menu-logo" src="assets/images/Logo-white.png"/>
+            <img class="menu-logo" src="assets/images/Logo-white.svg"/>
         </div>
         <div [routerLink]="['/product']">Product</div>
         <div [routerLink]="['/pricing']">Pricing</div>
